--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,18 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
-  line-height: 2;
+}
+hr {
+  border: dotted #eaf6f6 6px;
+  border-bottom: none;
+  width: 5%;
+  margin: 100px auto;
 }
 h1{
   font-family: 'Sacramento', cursive;
   margin: 50px auto 0 auto;
   font-size: 5.625em;
-  color: #66BFBF
+  color: #66BFBF;
 }
 h2 {
   font-size: 2.5rem;
@@ -16,6 +21,9 @@ h2 {
 }
 h3, a {
   color: #11999E;
+}
+p {
+  line-height: 2;
 }
 a {
   text-decoration: none;
@@ -26,18 +34,82 @@ a {
   position: relative;
 }
 .middle-container {
-  background-color: #e4f9f5;
-  padding: 10px;
+  background-color: white;
+  margin: 100px auto;
+}
+.skill-row {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+}
+.computer{
+  width: 25%;
+  height: 25%;
+  float: left;
+  background-color: rgb(218, 120, 82);
+  border-radius: 320px;
+  margin-right: 30px;
+}
+.music-note{
+  width: 25%;
+  height: 25%;
+  float: right;
+  background-color: rgb(218, 120, 82);
+  border-radius: 320px;
+  margin-left: 30px;
 }
 .bottom-container {
   background-color: #40514e;
   padding: 10px;
 }
+.btn {
+  background: #30E3CA;
+  background-image: -webkit-linear-gradient(top, #30E3CA, #11999E);
+  background-image: -moz-linear-gradient(top, #30E3CA, #11999E);
+  background-image: -ms-linear-gradient(top, #30E3CA, #11999E);
+  background-image: -o-linear-gradient(top, #30E3CA, #11999E);
+  background-image: linear-gradient(to bottom, #30E3CA, #11999E);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  color: #FFFFFF;
+  font-family: Arial;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 10px;
+  box-shadow: 1px 1px 20px 0px white;
+  -webkit-box-shadow: 1px 1px 20px 0px white;
+  -moz-box-shadow: 1px 1px 20px 0px white;
+  text-shadow: 1px 1px 20px white;
+  border: #e4f9f5 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  margin: 50px auto
+  }
+  
+  .btn:hover {
+    border: solid #11999E 1px;
+  background: #E4F9F5;
+  background-image: -webkit-linear-gradient(top, #E4F9F5, #30E3CA);
+  background-image: -moz-linear-gradient(top, #E4F9F5, #30E3CA);
+  background-image: -ms-linear-gradient(top, #E4F9F5, #30E3CA);
+  background-image: -o-linear-gradient(top, #E4F9F5, #30E3CA);
+  background-image: linear-gradient(to bottom, #E4F9F5, #30E3CA);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  text-decoration: none;
+  }
 .footer-link {
   color: black;
-  padding: 50px;
+  padding: 10px 50px;
   padding-top: none;
   margin-top: 10px;
+}
+.footer-link:hover {
+  text-decoration: underline;
 }
 .bottom-cloud, .top-cloud {
   position: absolute;
@@ -50,12 +122,7 @@ a {
   right: 300px;
   top: 50px;
 }
-.music-note {
-  width: 320px;
-  height: 320px;
-  background-color: rgb(218, 120, 82);
-  border-radius: 320px;
-}
+
 #title {
   font-weight: normal;
 }
@@ -66,5 +133,12 @@ a {
   color: black;
   text-decoration: underline;
 }
+#credits a:hover {
+  text-decoration: none;
+}
+#copyright {
+  font-size: 10px;
+}
+
 
 
